--- a/assignments/My_Answer_Assignment_01/01_assignment_Zhang_Tianxin_21352232.ipynb
+++ b/assignments/My_Answer_Assignment_01/01_assignment_Zhang_Tianxin_21352232.ipynb
@@ -1512,6 +1512,8 @@
    "id": "67280ceb",
    "metadata": {},
    "source": [
+    "##Get the levels() function here: https://www.marsja.se/how-to-rename-factor-levels-in-r-dplyr/\n",
+    "\n",
     "##Get the relevel() function here: https://stat.ethz.ch/R-manual/R-devel/library/stats/html/relevel.html "
    ]
   },
