--- a/assignments/02_assignment_21352232_Tianxin_Zhang.ipynb
+++ b/assignments/02_assignment_21352232_Tianxin_Zhang.ipynb
@@ -95,7 +95,34 @@
    "source": [
     "# Exercise 1:\n",
     "\n",
-    "# Your code goes here"
+    "# Your code goes here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f0feb2d",
+   "metadata": {},
+   "source": [
+    "If I type character like \"1997\", NA will be introduced  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d24b16f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_age_2 <- function() {\n",
+    "  yob <- readline(\"Please enter your year of birth: \")\n",
+    "  if(is.na(as.numeric(yob)))\n",
+    "  {\n",
+    "    return(print(\"Please enter a number\"))}\n",
+    "  else{age <- 2022 - as.numeric(yob)\n",
+    "  return(age)}\n",
+    "}\n",
+    "\n",
+    "get_age_2()"
    ]
   },
   {
@@ -137,18 +164,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "31eabd68",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "55"
+      ],
+      "text/latex": [
+       "55"
+      ],
+      "text/markdown": [
+       "55"
+      ],
+      "text/plain": [
+       "[1] 55"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Exercise 2:\n",
     "\n",
-    "# Your code goes here"
+    "# Your code goes here\n",
+    "\n",
+    "\n",
+    "fib_single_num <- function(n) {\n",
+    " if (n <=1) {return(n)}\n",
+    "    else{\n",
+    "    return(fib_single_num(n-1) + fib_single_num(n-2))}\n",
+    "}\n",
+    "\n",
+    "fib_single_num(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d8e1c7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fib_single_num(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6da156c7",
+   "metadata": {},
+   "source": [
+    "How to create Fibonacci sequence, last number: https://www.datamentor.io/r-programming/examples/fibonacci-recursion/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02626127",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_fib <- function (n) {\n",
+    "  if (length(n) <= 1){\n",
+    "  fib_single_num(n)}\n",
+    "  else {\n",
+    "    fib_num <- c(0, 1)\n",
+    "    fib_num <- c(fib_single_num(n[1:max(n)]))}\n",
+    "  return(fib_num)\n",
+    "    \n",
+    "print(get_fib(c(1, 2, 3, 4, 5)))\n",
+    "print(get_fib(c(3, 9, 12)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bbdf44b",
+   "metadata": {},
+   "source": [
+    "I failed to make it work in R, but I tried to seperate it into two sections: when there is only a single element in the vector, and when there are multiple elements in the vector. \n",
+    "I tried the c(fib_single_num(n[1:max(n)])) part and it didn't work either.(see below) \n",
+    "That's how far I can get. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52099e35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a <- c(1, 3, 6)\n",
+    "c(fib_single_num(a[1:max(a)]))"
    ]
   },
   {
@@ -200,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "fb1cacd2",
    "metadata": {
     "slideshow": {
@@ -210,8 +323,28 @@
    "outputs": [],
    "source": [
     "# Exercise 3:\n",
+    "# Your code goes here\n",
     "\n",
-    "# Your code goes here"
+    "T_TEST_FUNCTION <- function(mat, grp) {\n",
+    "  for (i in (1: 1000)){\n",
+    "    tstats <- c()\n",
+    "    tstats <- c(unname((t.test(mat[, i],grp)$statistic)))\n",
+    "} \n",
+    "  return(tstats)\n",
+    "}\n",
+    "\n",
+    "T_TEST_MATGRP <- T_TEST_FUNCTION(mat, grp)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9559c747",
+   "metadata": {},
+   "source": [
+    "Note: I don't think that's the right answer because I only have one element in the output. But I don't know how to fix it. "
    ]
   },
   {
@@ -230,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "43c5c875",
    "metadata": {
     "slideshow": {
@@ -245,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "22e51dcb",
    "metadata": {
     "slideshow": {
@@ -256,7 +389,32 @@
    "source": [
     "# Exercise 4:\n",
     "\n",
-    "# Your code goes here"
+    "# Your code goes here\n",
+    "\n",
+    "dfs_1 <- dfs[[1]]\n",
+    "dfs_2 <- dfs[[2]]\n",
+    "dfs_3 <- dfs[[3]]\n",
+    "dfs_4 <- dfs[[4]]\n",
+    "dfs_5 <- dfs[[5]]\n",
+    "dfs_6 <- dfs[[6]]\n",
+    "dfs_7 <- dfs[[7]]\n",
+    "dfs_8 <- dfs[[8]]\n",
+    "dfs_9 <- dfs[[9]]\n",
+    "dfs_10 <- dfs[[10]]\n",
+    "\n",
+    "dfs_tog <- rbind(dfs_1, dfs_2, dfs_3, dfs_4, dfs_5, dfs_6, dfs_7, dfs_8, dfs_9, dfs_10)\n",
+    "\n",
+    "dfs_tog <- lapply(dfs, rbind)\n",
+    "\n",
+    "dfs_tog_uni <- unique(dfs_tog)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6451bb73",
+   "metadata": {},
+   "source": [
+    "177 observations, 2 variables"
    ]
   },
   {
@@ -279,9 +437,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "fd7f1c95",
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -290,7 +449,28 @@
    "source": [
     "# Exercise 5:\n",
     "\n",
-    "# Your code goes here"
+    "# Your code goes here\n",
+    "library(tidyr)\n",
+    "\n",
+    "PATH <- \"C:/Users/Caesar/OneDrive - TCDUD.onmicrosoft.com/PhD Y1/ASDS CPSS/week 6/kaggle_survey_2021_responses.csv\"\n",
+    "questions <- readr::read_csv(PATH, n_max = 2)\n",
+    "kaggle2021 <- readr::read_csv(PATH, col_names = names(questions), skip = 2)\n",
+    "\n",
+    "kaggle2021_q7 <- kaggle2021[c(\"Q7_Part_1\", \"Q7_Part_2\", \"Q7_Part_3\", \"Q7_Part_4\",\"Q7_Part_5\", \"Q7_Part_6\", \"Q7_Part_7\", \"Q7_Part_8\", \"Q7_Part_9\", \"Q7_Part_10\", \"Q7_Part_11\", \"Q7_Part_12\", \"Q7_OTHER\")]\n",
+    "\n",
+    "kaggle2021_q7_longer <- kaggle2021_q7 %>%\n",
+    "  tidyr::pivot_longer(\n",
+    "    contains(\"Q7_\"),\n",
+    "    names_to = (\"Q7\"),\n",
+    "    values_to = (\"programming_language\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acaa353f",
+   "metadata": {},
+   "source": [
+    "It worked in R, but got the error in Jupyter Notebook"
    ]
   }
  ],
