--- a/assignments/02_assignment_21352232_Tianxin_Zhang.ipynb
+++ b/assignments/02_assignment_21352232_Tianxin_Zhang.ipynb
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fd7f1c95",
    "metadata": {
     "scrolled": true,
@@ -445,7 +445,52 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  .default = col_character()\n",
+      ")\n",
+      "See spec(...) for full column specifications.\n",
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  .default = col_character(),\n",
+      "  `Time from Start to Finish (seconds)` = col_double(),\n",
+      "  Q30_B_Part_1 = col_logical(),\n",
+      "  Q30_B_Part_2 = col_logical(),\n",
+      "  Q30_B_Part_3 = col_logical(),\n",
+      "  Q30_B_Part_4 = col_logical(),\n",
+      "  Q30_B_Part_5 = col_logical(),\n",
+      "  Q30_B_Part_6 = col_logical(),\n",
+      "  Q30_B_Part_7 = col_logical(),\n",
+      "  Q30_B_OTHER = col_logical()\n",
+      ")\n",
+      "See spec(...) for full column specifications.\n"
+     ]
+    },
+    {
+     "ename": "ERROR",
+     "evalue": "Error: 'pivot_longer' is not an exported object from 'namespace:tidyr'\n",
+     "output_type": "error",
+     "traceback": [
+      "Error: 'pivot_longer' is not an exported object from 'namespace:tidyr'\nTraceback:\n",
+      "1. kaggle2021_q7 %>% tidyr::pivot_longer(contains(\"Q7_\"), names_to = (\"Q7\"), \n .     values_to = (\"programming_language\"))",
+      "2. withVisible(eval(quote(`_fseq`(`_lhs`)), env, env))",
+      "3. eval(quote(`_fseq`(`_lhs`)), env, env)",
+      "4. eval(quote(`_fseq`(`_lhs`)), env, env)",
+      "5. `_fseq`(`_lhs`)",
+      "6. freduce(value, `_function_list`)",
+      "7. withVisible(function_list[[k]](value))",
+      "8. function_list[[k]](value)",
+      "9. tidyr::pivot_longer",
+      "10. getExportedValue(pkg, name)",
+      "11. stop(gettextf(\"'%s' is not an exported object from 'namespace:%s'\", \n  .     name, getNamespaceName(ns)), call. = FALSE, domain = NA)"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 5:\n",
     "\n",
