--- a/assignments/03_assignment.ipynb
+++ b/assignments/03_assignment.ipynb
@@ -49,20 +49,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 92,
    "id": "02e71f56",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mile\n",
+      "one\n",
+      "ton\n",
+      "not\n",
+      "elim\n",
+      "eno\n",
+      "not\n",
+      "ton\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 1:\n",
     "\n",
     "milestone = 'milestone'\n",
     "\n",
-    "# Your code goes here"
+    "# Your code goes here\n",
+    "\n",
+    "mile = milestone[0:4]\n",
+    "print(m)\n",
+    "\n",
+    "one = milestone[6:9]\n",
+    "print(one)\n",
+    "\n",
+    "ton = milestone[5:8]\n",
+    "print(ton)\n",
+    "\n",
+    "not_ = milestone[5:8][::-1]\n",
+    "print(not_)\n",
+    "\n",
+    "# reverse order\n",
+    "\n",
+    "mile_re = mile[::-1]\n",
+    "print(mile_re)\n",
+    "\n",
+    "one_re = one[::-1]\n",
+    "print(one_re)\n",
+    "\n",
+    "ton_re = ton[::-1]\n",
+    "print(ton_re)\n",
+    "\n",
+    "not_re = not_[::-1]\n",
+    "print(not_re)\n",
+    "\n"
    ]
   },
   {
@@ -81,14 +123,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 86,
    "id": "5ae6e422",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "closing parenthesis ']' does not match opening parenthesis '(' (3012237816.py, line 20)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [86]\u001b[1;36m\u001b[0m\n\u001b[1;33m    [books.replace(x, len(x.split()) for x in books if len(x.split()) >= 3]\u001b[0m\n\u001b[1;37m                                                                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m closing parenthesis ']' does not match opening parenthesis '('\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2:\n",
     "\n",
@@ -101,7 +152,129 @@
     "    'The Picture of Dorian Gray'\n",
     "]\n",
     "\n",
-    "# Your code goes here"
+    "# Your code goes here\n",
+    "\n",
+    "\n",
+    "# number of space, len()\n",
+    "# .replace()\n",
+    "\n",
+    "\n",
+    "\n",
+    "[books.replace(x, len(x.split()) for x in books if len(x.split()) >= 3]\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "881f3afe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def number_character(string):  \n",
+    "    count = 1\n",
+    "    for i in range(0, len(string)-1):\n",
+    "        if string[i] == \" \":\n",
+    "            count += 1        \n",
+    "    return count \n",
+    "        if count <= 2:  \n",
+    "    return string\n",
+    "        else:  \n",
+    "    return string.replace(count+1)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "string = books[2]\n",
+    "\n",
+    "number_character(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09a38d0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "        if count <= 2:  \n",
+    "    return string\n",
+    "        else:  \n",
+    "    return string.replace(count+1)\n",
+    "\n",
+    "\n",
+    "print(number_character(Dubliners))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "83f66426",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(string.split())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "b515d2e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(books[3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6286c178",
+   "metadata": {},
+   "source": [
+    "Get the for loop here https://www.geeksforgeeks.org/python-program-to-count-the-number-of-spaces-in-string/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bd0427a",
+   "metadata": {},
+   "source": [
+    "get how many words in a string: Cran.r-project.org"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f296fd6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get nested "
    ]
   },
   {
@@ -122,14 +295,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 216,
    "id": "d056ed73",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['\\nA', 'programmer', 'is', 'ideally', 'an', 'essayist', 'who', 'works', 'with', 'traditional', 'aesthetic', 'and', '\\nliterary', 'forms', 'as', 'well', 'as', 'mathematical', 'concepts,', 'to', 'communicate', 'the', 'way', 'that', '\\nan', 'algorithm', 'works', 'and', 'to', 'convince', 'a', 'reader', 'that', 'the', 'results', 'will', 'be', 'correct.\\n']\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'ascii_lowercase'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [216]\u001b[0m, in \u001b[0;36m<cell line: 15>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     14\u001b[0m alp \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(quote_split)):\n\u001b[1;32m---> 16\u001b[0m     alp\u001b[38;5;241m.\u001b[39mappend(\u001b[43mquote_split\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mascii_lowercase\u001b[49m())\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'ascii_lowercase'"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 3:\n",
     "\n",
@@ -139,7 +331,43 @@
     "an algorithm works and to convince a reader that the results will be correct.\n",
     "'''\n",
     "\n",
-    "# Your code goes here"
+    "# Your code goes here\n",
+    "\n",
+    "quote_split = quote.split(\" \")\n",
+    "print(quote_split)\n",
+    "\n",
+    "alp = []\n",
+    "for i in range(len(quote_split)):\n",
+    "    alp.append(quote_split[i].ascii_lowercase())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "id": "8778be3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['27', '42', '2']"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "## From lecture, let's do the similar things \n",
+    "\n",
+    "l = [3, 27, 9, 42, 10, 2, 5]\n",
+    "s = []\n",
+    "for i in range(1, len(l), 2):\n",
+    " s.append(str(l[i]))\n",
+    "s"
    ]
   },
   {
@@ -238,18 +466,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 153,
    "id": "353c25a9",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Exercise 5:\n",
     "\n",
-    "# Your text and code go here"
+    "# Your text and code go here\n",
+    "\n",
+    "def check_Pal(s):\n",
+    "    if s == s[::-1]:\n",
+    "        return True \n",
+    "    else: \n",
+    "        return False \n",
+    "\n",
+    "s = 'no lemon, no melon'\n",
+    "check_Pal(s)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "cd364383",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = 'no lemon, no melon'\n",
+    "\n"
    ]
   }
  ],
@@ -270,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
