--- a/assignments/My_Answer_Assignment_03/03_assignment_Tianxin_Zhang_21352232.ipynb
+++ b/assignments/My_Answer_Assignment_03/03_assignment_Tianxin_Zhang_21352232.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 1,
    "id": "02e71f56",
    "metadata": {
     "slideshow": {
@@ -80,7 +80,7 @@
     "# Your code goes here\n",
     "\n",
     "mile = milestone[0:4]\n",
-    "print(m)\n",
+    "print(mile)\n",
     "\n",
     "one = milestone[6:9]\n",
     "print(one)\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "id": "5ae6e422",
    "metadata": {
     "slideshow": {
@@ -132,12 +132,14 @@
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "closing parenthesis ']' does not match opening parenthesis '(' (3012237816.py, line 20)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [86]\u001b[1;36m\u001b[0m\n\u001b[1;33m    [books.replace(x, len(x.split()) for x in books if len(x.split()) >= 3]\u001b[0m\n\u001b[1;37m                                                                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m closing parenthesis ']' does not match opening parenthesis '('\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['Dubliners', 'Ulysses', 3, 'Normal People', 3, 5]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -159,104 +161,11 @@
     "# .replace()\n",
     "\n",
     "\n",
+    "s = [len(x.split())if len(x.split()) >= 3 else x for x in books ]\n",
     "\n",
-    "[books.replace(x, len(x.split()) for x in books if len(x.split()) >= 3]\n",
-    "\n",
+    "s\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "881f3afe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def number_character(string):  \n",
-    "    count = 1\n",
-    "    for i in range(0, len(string)-1):\n",
-    "        if string[i] == \" \":\n",
-    "            count += 1        \n",
-    "    return count \n",
-    "        if count <= 2:  \n",
-    "    return string\n",
-    "        else:  \n",
-    "    return string.replace(count+1)\n",
-    "\n",
-    "    \n",
-    "\n",
-    "\n",
-    "string = books[2]\n",
-    "\n",
-    "number_character(string)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "09a38d0d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "        if count <= 2:  \n",
-    "    return string\n",
-    "        else:  \n",
-    "    return string.replace(count+1)\n",
-    "\n",
-    "\n",
-    "print(number_character(Dubliners))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "83f66426",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(string.split())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 162,
-   "id": "b515d2e2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "13"
-      ]
-     },
-     "execution_count": 162,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(books[3])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6286c178",
-   "metadata": {},
-   "source": [
-    "Get the for loop here https://www.geeksforgeeks.org/python-program-to-count-the-number-of-spaces-in-string/"
    ]
   },
   {
@@ -265,16 +174,6 @@
    "metadata": {},
    "source": [
     "get how many words in a string: Cran.r-project.org"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f296fd6e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get nested "
    ]
   },
   {
@@ -295,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 3,
    "id": "d056ed73",
    "metadata": {
     "slideshow": {
@@ -307,19 +206,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['\\nA', 'programmer', 'is', 'ideally', 'an', 'essayist', 'who', 'works', 'with', 'traditional', 'aesthetic', 'and', '\\nliterary', 'forms', 'as', 'well', 'as', 'mathematical', 'concepts,', 'to', 'communicate', 'the', 'way', 'that', '\\nan', 'algorithm', 'works', 'and', 'to', 'convince', 'a', 'reader', 'that', 'the', 'results', 'will', 'be', 'correct.\\n']\n",
       "['\\nA', 'programmer', 'is', 'ideally', 'an', 'essayist', 'who', 'works', 'with', 'traditional', 'aesthetic', 'and', '\\nliterary', 'forms', 'as', 'well', 'as', 'mathematical', 'concepts,', 'to', 'communicate', 'the', 'way', 'that', '\\nan', 'algorithm', 'works', 'and', 'to', 'convince', 'a', 'reader', 'that', 'the', 'results', 'will', 'be', 'correct.\\n']\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'ascii_lowercase'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [216]\u001b[0m, in \u001b[0;36m<cell line: 15>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     14\u001b[0m alp \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(quote_split)):\n\u001b[1;32m---> 16\u001b[0m     alp\u001b[38;5;241m.\u001b[39mappend(\u001b[43mquote_split\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mascii_lowercase\u001b[49m())\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'ascii_lowercase'"
-     ]
+     "data": {
+      "text/plain": [
+       "{'\\n', 'a', 'b', 'c', 'e', 'f', 'i', 'm', 'p', 'r', 't', 'w'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -336,38 +235,196 @@
     "quote_split = quote.split(\" \")\n",
     "print(quote_split)\n",
     "\n",
-    "alp = []\n",
-    "for i in range(len(quote_split)):\n",
-    "    alp.append(quote_split[i].ascii_lowercase())\n",
+    "h = [i for i in quote_split if i not in [\" \", \"-\", \"_\", \",\", \"#\", \"'\"]] \n",
+    "print(h)\n",
+    "\n",
+    "{e[0] for e in h}\n",
+    "\n",
+    "\n",
+    "\n",
+    " \n",
+    "\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7f014e8",
+   "metadata": {},
+   "source": [
+    "Note: I tried to get rid of '\\n' by including \"'\" in the g = [i for i in quote_split if i not in [\" \", \"-\", \"_\", \",\", \"#\", \"'\"]] , but it looks like it didn't work "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "324d7bb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'m', 't', 'a', '\\n', 'w', 'f', 'c', 'b', 'i', 'e', 'p', 'r'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = {e[0] for e in h}\n",
+    "print(m)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
-   "id": "8778be3f",
+   "execution_count": 5,
+   "id": "38692e4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'results', 'a', 'an', 'essayist', 'traditional', 'with', 'will', 'as', 'the', 'reader', 'to', 'well', 'way', 'correct.\\n', 'aesthetic', 'be', 'mathematical', '\\nA', 'and', 'algorithm', 'forms', 'ideally', '\\nan', 'programmer', 'convince', 'who', 'is', 'concepts,', 'that', '\\nliterary', 'communicate', 'works'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "g = {i for i in quote_split if i not in [\" \", \"-\", \"_\", \",\", \"#\", \"'\"]}\n",
+    "print(g)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "12e7df80",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['27', '42', '2']"
+       "{'\\n - \\nA',\n",
+       " '\\n - \\nan',\n",
+       " '\\n - \\nliterary',\n",
+       " 'a - a',\n",
+       " 'a - aesthetic',\n",
+       " 'a - algorithm',\n",
+       " 'a - an',\n",
+       " 'a - and',\n",
+       " 'a - as',\n",
+       " 'b - be',\n",
+       " 'c - communicate',\n",
+       " 'c - concepts,',\n",
+       " 'c - convince',\n",
+       " 'c - correct.\\n',\n",
+       " 'e - essayist',\n",
+       " 'f - forms',\n",
+       " 'i - ideally',\n",
+       " 'i - is',\n",
+       " 'm - mathematical',\n",
+       " 'p - programmer',\n",
+       " 'r - reader',\n",
+       " 'r - results',\n",
+       " 't - that',\n",
+       " 't - the',\n",
+       " 't - to',\n",
+       " 't - traditional',\n",
+       " 'w - way',\n",
+       " 'w - well',\n",
+       " 'w - who',\n",
+       " 'w - will',\n",
+       " 'w - with',\n",
+       " 'w - works'}"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "## From lecture, let's do the similar things \n",
-    "\n",
-    "l = [3, 27, 9, 42, 10, 2, 5]\n",
-    "s = []\n",
-    "for i in range(1, len(l), 2):\n",
-    " s.append(str(l[i]))\n",
-    "s"
+    "{m[0].lower() + ' - ' + m for m in g}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bd51c355",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'r': 'reader',\n",
+       " 'a': 'algorithm',\n",
+       " 'e': 'essayist',\n",
+       " 't': 'that',\n",
+       " 'w': 'works',\n",
+       " 'c': 'communicate',\n",
+       " 'b': 'be',\n",
+       " 'm': 'mathematical',\n",
+       " '\\n': '\\nliterary',\n",
+       " 'f': 'forms',\n",
+       " 'i': 'is',\n",
+       " 'p': 'programmer'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{m[0].lower(): m for m in g}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a851f50c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'r': ['reader'],\n",
+       " 'a': ['algorithm'],\n",
+       " 'e': ['essayist'],\n",
+       " 't': ['that'],\n",
+       " 'w': ['works'],\n",
+       " 'c': ['communicate'],\n",
+       " 'b': ['be'],\n",
+       " 'm': ['mathematical'],\n",
+       " '\\n': ['\\nliterary'],\n",
+       " 'f': ['forms'],\n",
+       " 'i': ['is'],\n",
+       " 'p': ['programmer']}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{m[0].lower(): [m] for m in g}\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "7c1258fa",
+   "metadata": {},
+   "source": [
+    "I tried to keep the unique first characters and all letters with the same first character at the same time but didn't succeed "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d2efba7",
+   "metadata": {},
+   "source": [
+    "How to get unique values in Python: https://www.geeksforgeeks.org/python-get-unique-values-list/ "
    ]
   },
   {
@@ -403,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "66f3fa84",
    "metadata": {
     "slideshow": {
@@ -417,7 +474,7 @@
        "4.123105625617661"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +490,59 @@
     "x_dist = q[0] - p[0]\n",
     "y_dist = q[1] - p[1]\n",
     "dist = (x_dist**2 + y_dist**2)**(0.5)\n",
-    "dist"
+    "dist\n",
+    "    \n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "83a7e9a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.9498743710662"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def Eu_Distance(p, q):\n",
+    "    \"\"\"This is a function to calculate euclidean distance. The length of p and q should be the same\"\"\"\n",
+    "    dist =0\n",
+    "    for i in range(len(p)):\n",
+    "        dist = dist + ((p[i]-q[i])**2)\n",
+    "    return (dist**(0.5))\n",
+    "\n",
+    "Eu_Distance([5,1,3,12,7],[10,8,3,9,11]) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9c712665",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function Eu_Distance in module __main__:\n",
+      "\n",
+      "Eu_Distance(p, q)\n",
+      "    This is a function to calculate euclidean distance. The length of p and q should be the same\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(Eu_Distance)"
    ]
   },
   {
@@ -466,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 12,
    "id": "353c25a9",
    "metadata": {
     "slideshow": {
@@ -477,10 +586,10 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,25 +599,57 @@
     "\n",
     "# Your text and code go here\n",
     "\n",
-    "def check_Pal(s):\n",
-    "    if s == s[::-1]:\n",
-    "        return True \n",
-    "    else: \n",
-    "        return False \n",
+    "def check_Pal(s): \n",
+    "    d = [i for i in s if i not in [\" \", \"-\", \"_\", \",\", \"#\"]]  \n",
+    "    return d == d[::-1]\n",
     "\n",
-    "s = 'no lemon, no melon'\n",
-    "check_Pal(s)   "
+    "s = \"no lemon, no melon\"\n",
+    "check_Pal(s) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "id": "cd364383",
+   "execution_count": 13,
+   "id": "a49b5612",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "s = 'no lemon, no melon'\n",
-    "\n"
+    "d = \"abcd\"\n",
+    "check_Pal(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "130a4ed6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "a = \"2021-12-02\"\n",
+    "check_Pal(a)"
    ]
   }
  ],
