--- a/assignments/My_Answer_Assignment_03/03_assignment_Tianxin_Zhang_21352232.ipynb
+++ b/assignments/My_Answer_Assignment_03/03_assignment_Tianxin_Zhang_21352232.ipynb
@@ -249,6 +249,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "938908f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quote.replace(\" \", \"\").replace(\",\", \"\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a7f014e8",
    "metadata": {},
@@ -349,6 +359,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "97fda095",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "bd51c355",
    "metadata": {},
@@ -376,7 +394,13 @@
     }
    ],
    "source": [
-    "{m[0].lower(): m for m in g}\n"
+    "{m[0].lower(): m for m in g}\n",
+    "   for i in g \n",
+    "    l = []\n",
+    "    i[0]\n",
+    "    \n",
+    "    dic[m].append(l)\n",
+    "    \n"
    ]
   },
   {
